feat-정아 crud 완성

--- a/src/main/resources/templates/jj/insert.html
+++ b/src/main/resources/templates/jj/insert.html
@@ -21,7 +21,7 @@
 
 <div style="float: right;">
     <a th:href="@{/jj/list}" class="btn btn-danger">취소</a>
-    <button class="btn btn-primary" th:type="submit">제출</button>
+    <button class="btn btn-primary" type="submit">제출</button>
 </div>
 </form>
 </div>
