--- a/src/main/resources/templates/jj/update.html
+++ b/src/main/resources/templates/jj/update.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div style="width: 80%; margin: auto; padding-top: 20%">
-  <form action="/jj/update" method="post" th:object="${jj}">
+  <form action="/update" method="post" th:object="${jj}">
     <input type="hidden"  name="id" th:value="${jj.id}">
     <div class="mb-3">
       <label for="title" class="form-label">TITLE</label>
@@ -20,8 +20,8 @@
     </div>
 
     <div style="float: right;">
-      <a th:href="@{/jj/list}" class="btn btn-danger">취소</a>
-      <button class="btn btn-primary" th:type="submit">수정</button>
+     <a th:href="@{/jj/view}" class="btn btn-danger">취소</a>
+      <button class="btn btn-primary" type="submit">수정</button>
     </div>
   </form>
 </div>
